# uplog

./: .gitignore  .pre-commit-config.yaml  README.md
.github/workflows/: backend-deploy.yml  ci.yml
backend/: .dockerignore  Dockerfile  app.py  pyproject.toml
backend/base_models/: log_entry.py  session_response.py
backend/models/: __init__.py  models.py
backend/settings/: __init__.py  base.py
backend/tests/: conftest.py  test_session.py
backend/utils/: __init__.py  utils.py
cli/: cli.go  cli_test.go  go.mod  go.sum  main.go  sample.py
cli/api/: backend.go
cli/commands/: delete.go  list.go  run.go
cli/config/: constants.go
cli/constants/: constants.go
cli/db/: db.go  opertions.go
cli/executor/: main.go
cli/models/: models.go
cli/setup/: setup.go
cli/tail/: main.go
cli/tail/db/: db.go
cli/tail/utils/: utils.go
cli/utils/: utilities.go  utils.go
cli/workers/: worker.go
frontend/: index.html  tailwind.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: LogFilter.tsx  LogLevelBadge.tsx  LogRow.tsx  LogTable.tsx  StreamingIndicator.tsx
frontend/src/components/ui/: button.tsx
frontend/src/hooks/: useLogStream.ts  userLiveLogStream.ts
frontend/src/pages/: Dashboard.tsx  Documentation.tsx  Index.tsx  LiveLogging.tsx
frontend/src/types/: log.ts
